--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "@types/fs-extra": "^11.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "next": "^13.3.0"
   }
 }
