--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,7 +26,6 @@
     "@types/fs-extra": "^11.0.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
-    "next": "^13.3.0"
+    "tailwindcss": "^3.3.1"
   }
 }
